- Added fade effect for new lines. - Send multiple lines in a single message. - Fixed word wrap.

--- a/src/main/resources/static/css/tailstreamer.css
+++ b/src/main/resources/static/css/tailstreamer.css
@@ -37,7 +37,8 @@ header .version {
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-bottom: 25px;
-	overflow: auto;
+	overflow-y: auto;
+	word-wrap: break-word;
 }
 
 #connectionStatus .disconnected {
